error handling doc
